# OmniProfiler

./: LICENSE  README.md
agentic_analyzer/: cpp_parser.py  environment.yml  helper.py  requirements.txt
agentic_analyzer/configs/: global_config.yaml  global_config_template.yaml
agentic_analyzer/formatter/: apiformatter.py  formatter.py  sourceformatter.py  srcformatter.py
agentic_analyzer/gptquerier/: elemapiquerier.py  elemsrcquerier.py
agentic_analyzer/xml_analyzer/: classinfo.py  descriptioninfo.py  filenameinfo.py  functioninfo.py  module_info.py  paraminfo.py  utils.py  variableinfo.py
csrc/ResourceAnalysis/: CMakeLists.txt  ResourceAnalysis.cpp  ResourceAnalysis.h
csrc/RuntimeStatCollect/: CMakeLists.txt  RuntimeStatCollect.cpp  RuntimeStatCollect.h
csrc/omniprofiler/: CMakeLists.txt  omniprofiler.cpp
demo-case/MDL/: all-in-one.sh  case-buggy.sh  case-normal.sh  create_flamegraph.sh  function_list.txt  get_timestamp.cpp
dynamic_profiling/: core.py
entrypoints/: collect_results.py  doc_tokenizer.py  type_analyzer.py  visualizer.py
gui-dynamic-profiling/: .gitignore  CLAUDE.md  README.md  app.py  data_loader.py
gui-dynamic-profiling/callbacks/: CLAUDE.md  __init__.py  bottleneck_cb.py  data_callbacks.py  filter_cb.py  statistics_cb.py  timeline_cb.py
gui-dynamic-profiling/docs/: CLAUDE.md  components.md
gui-dynamic-profiling/filters/: CLAUDE.md  __init__.py  function_name.py  registry.py  resource_type.py  thread.py
gui-dynamic-profiling/layouts/: CLAUDE.md  __init__.py  bottleneck.py  filter_panel.py  main_layout.py  statistics.py  (+1 more)
(+16 files in other folders)
